*SVN*

* Improve performance of calling .create on has_many :through associations. [evan]

* Improved cloning performance by relying less on exception raising #8159 [Blaine]

* Added ActiveRecord::Base.inspect to return a column-view like #<Post id:integer, title:string, body:text> [DHH]

* Added yielding of Builder instance for ActiveRecord::Base#to_xml calls [DHH]

* Small additions and fixes for ActiveRecord documentation.  Closes #7342 [jeremymcanally]

* Add helpful debugging info to the ActiveRecord::StatementInvalid exception in ActiveRecord::ConnectionAdapters::SqliteAdapter#table_structure.  Closes #7925. [court3nay]

* SQLite: binary escaping works with $KCODE='u'.  #7862 [tsuka]

* Base#to_xml supports serialized attributes.  #7502 [jonathan]

* Base.update_all :order and :limit options. Useful for MySQL updates that must be ordered to avoid violating unique constraints.  [Jeremy Kemper]

* Remove deprecated object transactions.  People relying on this functionality should install the object_transactions plugin at http://code.bitsweat.net/svn/object_transactions.  Closes #5637 [Koz, Jeremy Kemper]

* PostgreSQL: remove DateTime -> Time downcast. Warning: do not enable translate_results for the C bindings if you have timestamps outside Time's domain.  [Jeremy Kemper]

* find_or_create_by_* takes a hash so you can create with more attributes than are in the method name. For example, Person.find_or_create_by_name(:name => 'Henry', :comments => 'Hi new user!') is equivalent to Person.find_by_name('Henry') || Person.create(:name => 'Henry', :comments => 'Hi new user!').  #7368 [Josh Susser]

* Make sure with_scope takes both :select and :joins into account when setting :readonly.  Allows you to save records you retrieve using method_missing on a has_many :through associations.  [Koz]

* Allow a polymorphic :source for has_many :through associations.  Closes #7143 [protocool]
